<resources>
    <string name="app_name">Smart Scale App</string>

    <string name="button_text">BMI Calculator</string>
    <string name="menu_name">Navigation Drawer</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smart_scale">Smart Scale</string>
    <string name="company_logo">company logo</string>
    <string name="enter_weight_and_height">Enter Weight and Height</string>
    <string name="enter_weight_kg">Enter Weight (kg)</string>
    <string name="enter_height_cm">Enter Height (cm)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="bmi_result">BMI Result:</string>
    <string name="signOut">Sign Out</string>
    <string name="warningProfile">Please finish setting up profile to use this feature</string>
    <string-array name="activity_levels">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extra Active</item>
    </string-array>


    <!--    <string-array name="activity_levels">-->
    <!--        <item>Sedentary</item>-->
    <!--        <item>Lightly Active</item>-->
    <!--        <item>Moderately Active</item>-->
    <!--        <item>Very Active</item>-->
    <!--        <item>Extra Active</item>-->
    <!--    </string-array>-->

    <string name="title_fragment">Title Fragment</string>
    <string name="night_switch">Night Switch</string>

    <string name="cd_home">Content Description for Home</string>
    <string name="title_home">Home</string>

    <string name="cd_bmi">Content Description for BMI</string>
    <string name="title_bmi">BMI Calculator</string>

    <string name="cd_calorie">Content Description for Calorie</string>
    <string name="title_calorie">Calorie Calculator</string>

    <string name="cd_diet">Content Description for Diet</string>
    <string name="title_diet">Diet Plan</string>

    <string name="cd_settings">Content Description for Settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
