<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".BMICalculator1">

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="297dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="14dp"
        android:hint="@string/enter_weight_kg"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/heightEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="292dp"
        android:layout_height="54dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="85dp"
        android:hint="@string/enter_height_cm"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/genderRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightEditText" />


    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/calculate_bmi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:textColor="@color/text_color"
        android:text="@string/enter_weight_and_height"
        android:textColorHint="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="145dp"
        android:layout_height="91dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/company_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_removebg" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="135dp"
        android:layout_height="36dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:text="@string/smart_scale"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="144dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="#0FE1FF"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="354dp" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/female"
            android:textColor="#0FE1FF"
            tools:layout_editor_absoluteX="193dp"
            tools:layout_editor_absoluteY="354dp" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>